--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Petition</string>
+    <string name="title_activity_petition_list_item">PetitionListItem</string>
 </resources>
