feat: 청원 글 작성 기능 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Petition</string>
     <string name="title_activity_petition_list_item">PetitionListItem</string>
+    <string name="title_activity_write">WriteActivity</string>
 </resources>
